# 3-digits

./: .env  Pipfile  autorun.bat  commands.bat  excel_results.py  excel_results.xlsx  find_gap_results.py  find_gap_results_v2.py  find_plus_minus.py  get_3d_results.py  get_swertres_results.py  headers.json  pcso_3d_results.csv  pyproject.toml
html/: 2006-01.html  2006-02.html  2006-03.html  2006-04.html  2006-05.html  2006-06.html  2006-07.html  2006-08.html  2006-09.html  2006-10.html  2006-11.html  2006-12.html  2007-01.html  2007-02.html  2007-03.html  2007-04.html  2007-05.html  2007-06.html  2007-07.html  2007-08.html  2007-09.html  2007-10.html  2007-11.html  2007-12.html  2008-01.html  2008-02.html  2008-03.html  2008-04.html  2008-05.html  2008-06.html  2008-07.html  2008-08.html  2008-09.html  2008-10.html  2008-11.html  2008-12.html  2009-01.html  2009-02.html  2009-03.html  2009-04.html  (+155 more)
unused_scripts/: find_gap_results_v1.py
